[package]
name = "playground-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

p3-blake3 = { version = "0.3.0", default-features = false }
p3-challenger = { version = "0.3.0", default-features = false }
p3-field = { version = "0.3.0", default-features = false }
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-dft = { version = "0.3.0", default-features = false }
p3-matrix = { version = "0.3.0", default-features = false }
p3-merkle-tree = { version = "0.3.0", default-features = false }
p3-commit = { version = "0.3.0", default-features = false }
p3-symmetric = { version = "0.3.0", default-features = false }

winterfell = { version = "0.13.0", default-features = false }
blake3 = { version = "1.5", default-features = false }

console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]
